# smello

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: docker.yml  publish-client.yml  publish-server.yml  tests.yml
clients/python/: .bumpversion.toml  CHANGELOG.md  pyproject.toml
clients/python/src/smello/: __init__.py  capture.py  config.py  transport.py
clients/python/src/smello/patches/: __init__.py  patch_grpc.py  patch_httpx.py  patch_requests.py
clients/python/tests/: test_capture.py  test_config.py  test_env.py  test_patch_grpc.py  test_transport.py
docs/: ai-skills.md  api.md  configuration.md  getting-started.md
docs/overrides/: home.html
examples/python/: async_httpx.py  basic_httpx.py  basic_requests.py  demo_httpbin.py
server/: .bumpversion.toml  CHANGELOG.md  pyproject.toml
server/src/smello_server/: __init__.py  __main__.py  app.py  models.py
server/src/smello_server/routes/: api.py  web.py
server/src/smello_server/static/: json-viewer.js  style.css
server/src/smello_server/templates/: base.html  request_detail.html  request_list.html
server/tests/: conftest.py  test_api.py
skills/http-debugger/: SKILL.md
skills/setup-smello/: SKILL.md
tests/test_e2e/: test_full_flow.py
tests/test_server/: test_api.py  test_web.py
