[project]
name = "smello"
version = "0.1.0"
description = "Capture outgoing HTTP requests and inspect them in a local web dashboard"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smello"]
